- Added java console logging implementation. - Fixed a bug where the thumbnail zoom level tile was not being retrieved and drawn correctly. - Changed the default tile prefetch mechanism from "Progressive" to off

--- a/src/Viewer.properties
+++ b/src/Viewer.properties
@@ -3,7 +3,7 @@
 # the required base DeepZoom image descriptor is located.
 
 # Base URL where the DeepZoom descriptor is located.
-# Usually by default, that file is named "dzc_output.xml"   
+# Usually by default, that file is named "dzc_output.xml"
 # if tools like Microsoft Deep Zoom Composer was used.
 #
 # Currently only supports HTTP and HTTPS (as well as FILE) URLs.
@@ -15,9 +15,10 @@ baseUrl=http://path/to/dz
 initialPage=0
 
 # Sets the fetching mechanism
-# 0 - Progressive from initialPage epicenter (default)
-# 1 - Divide and conquer
-fetchMechanism=0
+# Progressive - Progressive from initialPage epicenter (default)
+# DivideAndConquer - Divide and conquer
+# Any other value - Do not prefetch
+fetchMechanism=off
 
 # Thread-spawning / balancing setting.
 # N.B. This is only used by the Divide-and-conquer fetch mechanism.
@@ -62,3 +63,9 @@ imageQuality=lossless
 # true: Reset the previous page to its original zoom level
 # false: Keep / memorize the previous page's zoom level
 resetZoomOnPageChange=false
+
+# Log type options:
+# Console - LoggerInterface outputs messages to the standard output.
+# File - LoggerInterface outputs messages to a file.
+# Any other value - Logging is disabled.
+logType=Console
