--- a/src/Viewer.properties
+++ b/src/Viewer.properties
@@ -69,3 +69,9 @@ resetZoomOnPageChange=false
 # File - LoggerInterface outputs messages to a file.
 # Any other value - Logging is disabled.
 logType=Console
+
+# Minimum debug level to log
+# Priority is in the form
+# Fatal > Error > Info > Debug
+# For example, by setting to Info, all debug related logs will not be outputted.
+minimumLogLevel=Debug
